SystemUI: Add Sync tile
Co-authored-by: Michael Bestas <mkbestas@gmail.com>
Change-Id: I0c0bb51e736a01661566f1118f955e32eba96063

--- a/packages/SystemUI/res/values/neoteric_config.xml
+++ b/packages/SystemUI/res/values/neoteric_config.xml
@@ -56,6 +56,6 @@
 
     <!-- Extra Quick Settings tiles -->
     <string name="quick_settings_tiles_extra" translatable="false">
-	caffeine,heads_up
+	caffeine,heads_up,sync
     </string>
 </resources>
