--- a/packages/SystemUI/res/values/neoteric_config.xml
+++ b/packages/SystemUI/res/values/neoteric_config.xml
@@ -56,6 +56,6 @@
 
     <!-- Extra Quick Settings tiles -->
     <string name="quick_settings_tiles_extra" translatable="false">
-	caffeine
+	caffeine,heads_up
     </string>
 </resources>
