SystemUI: Add caffeine QS tile
Co-authored-by: chillger <alexander.loskutov@gmail.com>
Co-authored-by: Michael Bestas <mkbestas@gmail.com>
Change-Id: I0b9a498285930cc397b7c4d20ddec3f447e6d332

--- a/packages/SystemUI/res/values/neoteric_config.xml
+++ b/packages/SystemUI/res/values/neoteric_config.xml
@@ -56,5 +56,6 @@
 
     <!-- Extra Quick Settings tiles -->
     <string name="quick_settings_tiles_extra" translatable="false">
+	caffeine
     </string>
 </resources>
