--- a/packages/SystemUI/res/values/neoteric_strings.xml
+++ b/packages/SystemUI/res/values/neoteric_strings.xml
@@ -37,4 +37,10 @@
     <string name="status_bar_icons_title">Status bar icons</string>
     <!-- WiFi standard numbering on statusbar -->
     <string name="status_bar_wifi_standard">Wi-Fi standard number</string>
+
+    <!-- Custom QS tiles -->
+    <!-- Caffeine QS tile -->
+    <string name="quick_settings_caffeine_label">Caffeine</string>
+    <string name="accessibility_quick_settings_caffeine_off">Caffeine off.</string>
+    <string name="accessibility_quick_settings_caffeine_on">Caffeine on.</string>
 </resources>
