SystemUI: Status bar tuner improvements
* Split icon toggles to a separate page
* Remove deprecated TunerService usage
* Match theme with Settings
* Fix insets

Co-authored-by: Gabriele M <moto.falcon.git@gmail.com>
Co-authored-by: Ido Ben-Hur <idoybh2@gmail.com>
Co-authored-by: Michael Bestas <mkbestas@lineageos.org>
Co-authored-by: Oliver Scott <olivercscott@gmail.com>
Co-authored-by: SagarMakhar <sagarmakhar@gmail.com>
Co-authored-by: Steve Kondik <steve@cyngn.com>
Change-Id: Icc84575db18931d3a43bd9e640f2a55a51b460c1

--- a/packages/SystemUI/res/values/neoteric_strings.xml
+++ b/packages/SystemUI/res/values/neoteric_strings.xml
@@ -33,4 +33,6 @@
     <string name="tristate_rotation_90">Landscape (90°)</string>
     <string name="tristate_rotation_270">Landscape (270°)</string>
 
+    <!-- Status bar - icons -->
+    <string name="status_bar_icons_title">Status bar icons</string>
 </resources>
