frameworks: Add support for advanced restart options
Co-authored-by: Bruno Martins <bgcngm@gmail.com>
Co-authored-by: Dave Kessler <activethrasher00@gmail.com>
Co-authored-by: DvTonder <david.vantonder@gmail.com>
Co-authored-by: Jorge Ruesga <jorge@ruesga.com>
Co-authored-by: maxwen <max.weninger@gmail.com>
Co-authored-by: Ricardo Cerqueira <cyanogenmod@cerqueira.org>
Co-authored-by: Roman Birg <roman@cyngn.com>
Co-authored-by: SagarMakhar <sagarmakhar@gmail.com>
Co-authored-by: Veeti Paananen <veeti.paananen@rojekti.fi>
Co-authored-by: Zhao Wei Liew <zhaoweiliew@gmail.com>
Change-Id: I4b35d10b0811eff0d8e9ab68b2aedbe52b4aa53f

--- a/core/res/res/values/neoteric_config.xml
+++ b/core/res/res/values/neoteric_config.xml
@@ -101,4 +101,12 @@
 
     <!-- Whether key handler sends intent when changing slider position -->
     <string name="config_alertSliderIntent"></string>
+
+    <!-- Defines the actions shown in advanced reboot submenu -->
+    <string-array name="config_restartActionsList">
+        <item>restart</item>
+        <item>restart_recovery</item>
+        <item>restart_bootloader</item>
+	<item>restart_fastboot</item>
+     </string-array>
 </resources>
