--- a/core/res/res/values/neoteric_symbols.xml
+++ b/core/res/res/values/neoteric_symbols.xml
@@ -59,4 +59,7 @@
 
     <!-- Whether key handler sends intent when changing slider position -->
     <java-symbol type="string" name="config_alertSliderIntent" />
+
+    <!-- Defines the actions shown in advanced reboot submenu -->
+    <java-symbol type="array" name="config_restartActionsList" />
 </resources>
