--- a/packages/SystemUI/res/values/neoteric_strings.xml
+++ b/packages/SystemUI/res/values/neoteric_strings.xml
@@ -121,4 +121,10 @@
     <string name="quick_settings_powershare_off_powersave_label">Battery Share off\nBattery saver</string>
     <string name="quick_settings_powershare_off_low_battery_label">Battery Share off\nBattery too low</string>
     <string name="quick_settings_powershare_enabled_label">Battery Share is enabled</string>
+
+    <!-- Screen record -->
+    <string name="screenrecord_stopdot_label">Show stop dot</string>
+    <string name="screenrecord_stopdot_summary">Long press to move it</string>
+    <string name="screenrecord_lowquality_label">Lower quality</string>
+    <string name="screenrecord_lowquality_summary">For smaller file size</string>
 </resources>
