--- a/packages/SystemUI/res/values/neoteric_config.xml
+++ b/packages/SystemUI/res/values/neoteric_config.xml
@@ -58,4 +58,7 @@
     <string name="quick_settings_tiles_extra" translatable="false">
 	caffeine,heads_up,sync,ambient_display,usb_tether,aod,wifi,cell,vpn,sound,compass,dataswitch,locale,refresh_rate,preferred_network,powershare
     </string>
+
+    <!-- If not zero, limits the internal screen recorder's framerate to the set value. -->
+    <integer name="config_screenRecorderMaxFramerate">0</integer>
 </resources>
