SystemUI: Add RefreshRate tile
* Supports to cycle from all supported modes, e.g:
  60, 60 -> 60, 90 -> 60, 120 -> 90, 90 -> 90, 120 -> 120, 120 -> 60, 60

Signed-off-by: cjh1249131356 <cjh1249131356@gmail.com>

--- a/packages/SystemUI/res/values/neoteric_strings.xml
+++ b/packages/SystemUI/res/values/neoteric_strings.xml
@@ -105,4 +105,8 @@
     <!-- Language toggle tile -->
     <string name="quick_settings_locale_label">Language</string>
     <string name="quick_settings_locale_more_locales_toast">Configure multiple languages first</string>
+
+    <!-- Refresh rate tile -->
+    <string name="refresh_rate_tile_label">Refresh rate</string>
+    <string name="refresh_rate_unknown">Unknown</string>
 </resources>
