SystemUI: Add config for adding extra tiles
Signed-off-by: Abhay Singh Gill <abhaygill017@gmail.com>

--- a/packages/SystemUI/res/values/neoteric_config.xml
+++ b/packages/SystemUI/res/values/neoteric_config.xml
@@ -53,4 +53,8 @@
           <item>2047,46</item>
           <item>4095,0</item>
     </string-array>
+
+    <!-- Extra Quick Settings tiles -->
+    <string name="quick_settings_tiles_extra" translatable="false">
+    </string>
 </resources>
