SystemUI: Add wifi standard to statusbar tuner
* icons taken from: a799a35c5527482f2d577783170b0478b8021b3f "base: Refactor Wi-Fi standard icons"

[neobuddy89: Added wifi 7 icon]

Change-Id: I187fc97b9f4ad6d48b6c6f0b1215ffbcb1c972e2
Co-authored-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: Abhay Singh Gill <abhaygill017@gmail.com>

--- a/packages/SystemUI/res/values/neoteric_strings.xml
+++ b/packages/SystemUI/res/values/neoteric_strings.xml
@@ -35,4 +35,6 @@
 
     <!-- Status bar - icons -->
     <string name="status_bar_icons_title">Status bar icons</string>
+    <!-- WiFi standard numbering on statusbar -->
+    <string name="status_bar_wifi_standard">Wi-Fi standard number</string>
 </resources>
