--- a/packages/SystemUI/res/xml/status_bar_prefs.xml
+++ b/packages/SystemUI/res/xml/status_bar_prefs.xml
@@ -81,6 +81,11 @@
         android:key="wifi"
         android:title="@string/quick_settings_wifi_label" />
 
+    <com.android.systemui.tuner.TunerSwitch
+        android:icon="@drawable/ic_statusbar_wifi_standard"
+        android:key="wifi_standard"
+        android:title="@string/status_bar_wifi_standard" />
+
     <com.android.systemui.tuner.StatusBarSwitch
         android:icon="@drawable/ic_statusbar_ethernet"
         android:key="ethernet"
