SettingsLib: Disable wifi standard icon
Signed-off-by: Abhay Singh Gill <abhaygill017@gmail.com>

--- a/packages/SettingsLib/res/values/config.xml
+++ b/packages/SettingsLib/res/values/config.xml
@@ -33,5 +33,5 @@
     <bool name="config_hspa_data_distinguishable">false</bool>
 
     <!-- Control whether to show Wifi standard in Wifi icon -->
-    <bool name="config_show_wifi_standard">true</bool>
+    <bool name="config_show_wifi_standard">false</bool>
 </resources>
